--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
         <div class="pass-content">
             <h1>DTC And Cluster Bus Pass</h1>
             <img src="profile.png" alt="User Photo" class="user-photo">
-            <div class="user-name">ROHIT MAURYA</div>
+            <div class="user-name">DHANANJAY KUMAR</div>
             <div class="user-type">Student All route AC/Non AC</div>
-            <div class="bus-pass-no">Bus Pass No. <span class="blinking">7502032522285</span></div>
-            <div class="validity">Valid from 03/03/2025 to 02/07/2025</div>
+            <div class="bus-pass-no">Bus Pass No. <span class="blinking">7502032532367</span></div>
+            <div class="validity">Valid from 10/04/2025 to 09/07/2025</div>
             <div class="signature-qr-container">
                 <div class="signature">
                     <img src="sign.png" alt="Signature">
