--- a/main.html
+++ b/main.html
@@ -15,9 +15,7 @@
     <div class="bus-pass-container">
         <div class="pass-content">
             <h1>DTC And Cluster Bus Pass</h1>
-            <img src="photo_2025-05-11_19-18-20.jpg
-t
-" alt="User Photo" class="user-photo">
+            <img src="HONEY.png" alt="User Photo" class="user-photo">
             <div class="user-name">DHANANJAY KUMAR</div>
             <div class="user-type">Student All route AC/Non AC</div>
             <div class="bus-pass-no">Bus Pass No. <span class="blinking">7502032532367</span></div>
